<resources>
    <string name="app_name">Launcher</string>
    <string name="system_info">System Info:</string>
    <string name="battery_level">Battery level: %1$d%%</string>
    <string name="battery_level_indicator">Battery level indicator</string>
    <string name="available_memory">Available memory: %1$s GB</string>
    <string name="total_memory">Total memory: %1$s GB</string>
    <string name="available_storage">Available storage: %1$s GB</string>
    <string name="total_storage">Total storage: %1$s GB</string>
    <string name="temperature_celsius">%1$s°C</string>
    <string name="your_location">Your location</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="weather_clear">Clear</string>
    <string name="application_icon">Application icon</string>
    <string name="close_app_list">Close application\'s list</string>
    <string name="applications">Applications</string>
    <string name="close">Close</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_fog">Fog</string>
    <string name="weather_rain">Rain</string>
    <string name="weather_snow">Snow</string>
    <string name="weather_thunderstorm">Thunderstorm</string>
    <string name="weather_unknown">Unknown</string>
</resources>